# bAUTO

./: .gitignore  API_KEY_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.example.yaml  env.example  pyproject.toml  quick_start.py  requirements.txt  setup.py  test_installation.py
bauto/: README.md  cli.py
bauto/config/: __init__.py  settings.py
bauto/core/: ai_interface.py  automator.py  code_generator.py  parser.py
bauto/engine/: __init__.py  action_engine.py  browser.py  memory.py
bauto/examples/: advanced_example.yaml  form_filling_example.yaml  shopping_example.yaml  social_media_example.yaml  wikipedia_example.yaml  wikipedia_fixed_example.yaml
docs/: ARCHITECTURE.md
tests/: README.md  __init__.py  conftest.py  test_action_engine.py  test_ai_interface.py  test_automator.py  test_code_generator.py  test_config.py  test_parser.py
